docs: updated readme

--- a/example.env
+++ b/example.env
@@ -1,6 +1,9 @@
 # RPC endpoint (that supports the DAS ReadApi)
 # (e.g. Helius, Triton, Metaplex, GenesysGo, etc)
-RPC_URL=
+# RPC_URL=
 
 # absolute path for a local keypair file
-LOCAL_PAYER_JSON_ABSPATH=/home/nick/.config/solana/id.json
+# LOCAL_PAYER_JSON_ABSPATH=
+
+## example of using an absolute path for a current filesystem keypair
+# LOCAL_PAYER_JSON_ABSPATH=/home/nick/.config/solana/id.json
