fix: package name and gitignore

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "provable-actions",
+  "name": "@solana-developers/compressed-nfts",
   "version": "1.0.0",
   "license": "MIT",
   "extension": [
