--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,40 @@
-node_modules
-.git
-.local_keys
+# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
+
+# public/robots*
+public/rss*
+public/sitemap*
+.contentlayer
+
+# dependencies
+/node_modules
+/.pnp
+.pnp.js
+test-ledger
+
+# testing
+/coverage
+
+# next.js
+/.next/
+/out/
+
+# production
+/build
+
+# misc
+.DS_Store
+*.pem
+
+# debug
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+.pnpm-debug.log*
+
+# local env files and key files
 .env*
+.env*.local
+.local_keys
+
+# vercel
+.vercel
